# JuliaChem.jl

./: .travis.yml  02_MP2.json  InputFile.jl  InputScript.jl  InputSetup.jl  LICENSE.md  Manifest.toml  Project.toml  README.md  basis.jl  build-juliachem.sh  build-julichem.sh  build.sh  codecov.yml  hf.jl  input.jl  io.jl  ioinput.jl  juliachem.sh  julichem.jl  julichem.sh  julichem_shell.jl  math.jl  output.json  precompile.jl  script.jl  snoop-juliachem.sh  snoop.csv  snoop.jl  sto3g-water-debug.json  sto3g-water-output.json  straws.jl  submit_benchmark_s22_3.sh  tei.h5  test.csv  test.jl  test.json  test2.inp
docs/: make_user.jl
example-scripts/: minimal-rhf-script.jl  rhf-script.jl
example_inputs/: 631G-H2O.json  631Gdp-H2O.json  631g-h2.json  631g-water.json  PC0-H2.json  PC0-H2O.json  PC0-H2O2.json  PC0-OH.json  PC0-h2.json  README  STO-H2.json  STO-H2O.json  STO-OH.json  STO3G-H2O.json  acetaldehyde.jl  h2.json  pVDZ-H2.json  sto3g-h2-qc.json  sto3g-h2.json  sto3g-water-gms.json  sto3g-water.jl  sto3g-water.json  w50-dynamic.json  w50-static.json
example_scripts/: create-molecule-qc.jl  create-molecule-qc.py  create-molecule.jl  full-rhf.jl  minimal-rhf-benchmark-c.jl  minimal-rhf-benchmark.jl  minimal-rhf-benchmark.py  minimal-rhf-c.jl  minimal-rhf-repl.jl  minimal-rhf-repl.py  minimal-rhf-script.jl  minimal-rhf-snoop.jl  minimal-rhf-travis.jl  minimal-rhf.jl  minimal-rhf.py  read-input.jl  rhf-gradient-repl.jl  rhf-gradient.jl  rhf-properties-xyz-repl.jl  rhf-properties-xyz-repl.py  rhf-script.jl  (+2 more)
src/eri/: CMakeLists.txt  simint.c  simint.h  simint.jl
(+2260 files in other folders)
